--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Skills</a></li>
 								<li><a href="#about">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -41,7 +41,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">About</h2>
 										<style>
 											.indent-2 {float: center;}
 											.indent-2 section {width: 50%; float: left; text-align: center;padding-right: 1.25em;}
