--- a/index.html
+++ b/index.html
@@ -39,24 +39,19 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
+						<!-- About -->
 							<article id="intro">
 								<h2 class="major">About</h2>
 										<style>
-											.indent-2 {float: center;}
-											.indent-2 section {width: 50%; float: left; text-align: center;padding-right: 1.25em;}
-											.indent-3 {float: center;}
-											.indent-3 section {width: 50%; float: left; text-align: center;padding-left: 1.25em;}
+											.indent-3 {float: right;}
+											.indent-3 section {width: 100%; float: right; text-align: left}
 										</style>
 
-									<section class="indent-2">
-										<section>
-											<div><span class="image fit"><img src="linkedin.png" alt="" /></span></div>
-										</section>
-									</section>
 									<section class="indent-3">
 										<section>
-											<div><p> Hi, I'm Tony. I'm a data analyst skilled in automating the sourcing,
+											<div>
+												<span><img src="linkedin.png" width=35% height=20% align="left" style="padding-right:10px; padding-bottom: 10px;" /></span>
+												<p>Hi, I'm Tony. I'm a data analyst skilled in automating the sourcing,
 												processing, and visualizing of complex data structures. I pride myself
 												on my work ethic, resourcefulness, and my ability to learn quickly. The
 												bulk of my work is designing workflows in Alteryx to source, manipulate,
