--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 												on my work ethic, resourcefulness, and my ability to learn quickly. The
 												bulk of my work is designing workflows in Alteryx to source, manipulate,
 												and consolidate data which produces outputs that I then use to create Tableau
-												dashboard. If ya want any more details, here is my <a href="Resume.pdf" download><span class="image.left"><b>resume</b></span></a>.</p></div>
+												dashboard. Here is my <a href="Resume.pdf" download><span class="image.left"><b>resume</b></span></a> if you wish
+												to see more details about my work experience.</p></div>
 										</section>
 									</section>
 
@@ -111,7 +112,6 @@
 								<p><sup><i>*click the picture to navigate to the project's page</i></sup></p>
 								<h3>COVID "At a Glance" Dashboard</h3>
 								<a href="https://public.tableau.com/views/COVID-19ataglance/GlobalCOVID-19?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image fit"><img src="COVID Dashboard.png" alt="" /></span></a>
-								<p><i>Quick dashboard I threw together at the start of COVID to help myself stay updated with the latest stats</i></p>
 								<h3>Tableau Resume</h3>
 								<a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image fit"><img src="Tableau Resume.png" alt="" /></span></a>
 							</article>
