--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 												on my work ethic, resourcefulness, and my ability to learn quickly. The
 												bulk of my work is designing workflows in Alteryx to source, manipulate,
 												and consolidate data which produces outputs that I then use to create Tableau
-												dashboard. Here is my <a href="Resume.pdf" download><span class="image.left"><b>resume</b></span></a> if you wish
-												to see more details about my work experience.</p></div>
+												dashboard. For further details, here is my <a href="Resume.pdf" download><span class="image.left"><b>resume</b></span></a>.</p></div>
 										</section>
 									</section>
 
