--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 								<h3>Python - Simple GUI calculator using Tkinter</h3>
 								<p><a href="https://github.com/TPoluch/Calculator"  target="_blank" ><span class="image"><img src="Calculator.png" style="width:100%;"></span>
 								<h3>COVID "At a Glance" Dashboard</h3>
-								<p><a href="https://public.tableau.com/views/COVID-19ataglance/GlobalCOVID-19?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image fit"><img src="COVID Dashboard.png" alt="" /></span></a></p>
+								<p><a href="https://public.tableau.com/views/COVID-19ataglance/GlobalCOVID-19?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image"><img src="COVID Dashboard.png" style="width:100%;" /></span></a></p>
 								<h3>Tableau Resume</h3>
-								<p><a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image fit"><img src="Tableau Resume.png" alt="" /></span></a></p>
+								<p><a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image"><img src="Tableau Resume.png" style="width:100%;" /></span></a></p>
 							</article>
 
 						<!-- Contact -->
