--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 								<h2 class="major">Projects</h2>
 								<p><sup><i>*click the picture to navigate to the project's page</i></sup></p>
 								<h3>Python - Simple GUI calculator using Tkinter</h3>
-								<p><a href="https://github.com/TPoluch/Calculator"  target="_blank" ><span class="image"><img src="Calculator.png" style="width:100%;"></span></p>
+								<p><a href="https://github.com/TPoluch/Calculator"  target="_blank" ><span class="image"><img src="Calculator.png" style="width:100%;"></span></a></p>
 								<h3>COVID "At a Glance" Dashboard</h3>
 								<p><a href="https://public.tableau.com/views/COVID-19ataglance/GlobalCOVID-19?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image"><img src="COVID Dashboard.png" style="width:100%;" /></span></a></p>
 								<h3>Alteryx Workflow for COVID dashboard</h3>
-								<p><a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image fit"><img src="COVID_alteryx.png" style="width:100%;" /></span></a></p>
+								<p><a href="https://github.com/TPoluch/COVID_alteryx"  target="_blank" ><span class="image fit"><img src="COVID_alteryx.png" style="width:100%;" /></span></a></p>
 								<h3>Tableau Resume</h3>
 								<p><a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"  target="_blank" ><span class="image"><img src="Tableau Resume.png" style="width:100%;" /></span></a></p>
 							</article>
