--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">About</a></li>
+								<li><a href="#about">About</a></li>
 								<li><a href="#work">Skills</a></li>
-								<li><a href="#about">Projects</a></li>
+								<li><a href="#projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -40,7 +40,7 @@
 					<div id="main">
 
 						<!-- About -->
-							<article id="intro">
+							<article id="about">
 								<h2 class="major">About</h2>
 										<style>
 											.indent-3 {float: right;}
@@ -106,7 +106,7 @@
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<p><sup><i>*click the picture to navigate to the project's page</i></sup></p>
 								<h3>COVID "At a Glance" Dashboard</h3>
