--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
---> 
+-->
 <html>
 <head>
     <title>Anthony Poluch</title>
@@ -114,9 +114,11 @@
         <!-- About -->
         <article id="projects">
             <h2 class="major">Projects</h2>
-            <p><sup><i>*click the picture to navigate to the project's page</i></sup></p>
-            <h3>Python - Custom Recommended Playlist using Spotify API</h3>
-            <p>
+            <div><i><sup>*click the picture to navigate to the project's page</sup></i><br></div>
+            </br><h3>Python - Create User-Unique Spotify Playlist</h3>
+            <sup><p>Uses Spotify's API to generate a playlist tailored to the user's music tastes.
+                It deciphers the user's preferences via analysis of their favorite songs, audio feature tendencies,
+                and other key factors.<br></sup></br>
                 <a href="https://github.com/TPoluch/Spotify"
                    target="_blank"><span class="image"><img src="spotify_python.jpeg" style="width:100%;"/></span></a>
             </p>
