--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <article id="projects">
             <h2 class="major">Projects</h2>
             <div><i><sup>*click the picture to navigate to the project's page</sup></i><br></div>
-            </br><h3>Python - User-Unique Recommended Songs Playlist in Spotify</h3>
+            </br><h3>Python - User-Unique Recommended Songs Playlist</h3>
             <sup><p>Uses Spotify's API to generate a playlist tailored to the user's music tastes.
                 It deciphers the user's preferences via analysis of their favorite songs, audio feature tendencies,
                 and other key factors.<br></sup></br>
