--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="main.css"/>
-	<link rel="icon" href="/favicon.ico">
     <noscript>
         <link rel="stylesheet" href="noscript.css"/>
     </noscript>
+<link rel="icon" href="favicon.ico">
 </head>
 <body class="is-preload">
 
