--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <noscript>
         <link rel="stylesheet" href="noscript.css"/>
     </noscript>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="https://github.com/TPoluch/TPoluch.github.io/blob/main/favicon.ico">
 </head>
 <body class="is-preload">
 
