--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 <head>
     <title>Anthony Poluch</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="main.css"/>
