--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Anthony Poluch</title>
-    <link rel="shortcut icon" type="image/jpg" href="https://github.com/TPoluch/TPoluch.github.io/blob/835e52f0c8b9aba13544343075bb8aa550f2d042/favicon.ico"/>
+    <link rel="icon" href="favicon.ico"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="main.css"/>
