--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Anthony Poluch</title>
-    <link rel="icon" href="favicon.ico"/>
+    <link rel="icon" href="https://github.com/TPoluch/TPoluch.github.io/blob/main/favicon.ico"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="main.css"/>
