--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 <head>
-    <title>Anthony Poluch</title><link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <title>Anthony Poluch</title>
+    <link rel="icon" href="favicon.png"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="main.css"/>
