--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Anthony Poluch</title>
-    <link rel="icon" href="new_icon.png">
+    <link rel="icon" href="ID.png">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="main.css"/>
