--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <p><a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
                     src="COVID_alteryx.png" style="width:100%;"/></span></a></p>
             <h3>Tableau Resume</h3>
-            <sup><p>Uses Tableau to visualize past experience and skills among other thing.</sup>
+            <sup><p>Uses Tableau to visualize past experience and skills among other thing. Last updated <b><u>November 6, 2020</u></b></sup>
             <p><a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
                    target="_blank"><span class="image"><img src="Tableau Resume.png" style="width:100%;"/></span></a>
             </p>
