--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
         <!-- About -->
         <article id="projects">
             <h2 class="major">Projects</h2>
-            <div><i><sup>*click the picture to navigate to the project's page</sup></i><br></div>
-            </br><h3>Python - User-Unique Recommended Songs Playlist</h3>
+            <h5>Python - 2&nbsp;&nbsp;|&nbsp;&nbsp;
+                Tableau - 2&nbsp;&nbsp;|&nbsp;&nbsp;
+                SQL - 1&nbsp;&nbsp;|&nbsp;&nbsp;
+                Alteryx - 1</h5>
+            <p><i><sup>*click the picture to navigate to the project's page</sup></i></p>
+            <h3>Python - User-Unique Recommended Songs Playlist</h3>
             <sup><p>Uses Spotify's API to generate a playlist tailored to the user's music tastes.
                 It deciphers the user's preferences via analysis of their favorite songs, audio feature tendencies,
                 and other key factors.<br></sup></br>
