--- a/index.html
+++ b/index.html
@@ -133,24 +133,23 @@
             <a href="https://github.com/TPoluch/Peaky_Blinders_SQL_db"
                target="_blank"><span class="image"><img src="Peaky_Blinders_db.png" style="width:100%;"/></span></a>
             </p>
-            <h3>COVID "At a Glance" Dashboard</h3>
-            <sup><p>Tableau dashboard showing COVID data up top 4/23/2020. </sup>
-            <p>
+            <h3>Tableau - COVID "At a Glance" Dashboard</h3>
+            <sup><p>Tableau dashboard showing COVID data up top 4/23/2020.<br></sup></br>
                 <a href="https://public.tableau.com/views/COVID-19ataglance/GlobalCOVID-19?:language=en&:display_count=y&:origin=viz_share_link"
                    target="_blank"><span class="image"><img src="COVID Dashboard.png" style="width:100%;"/></span></a>
             </p>
-            <h3>Alteryx Workflow for COVID dashboard</h3>
-            <sup><p>Workflow to create the .hyper file used in the COVID "At a Glance" Dashboard.</sup>
-            <p><a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
+            <h3>Alteryx - Workflow for COVID dashboard</h3>
+            <sup><p>Workflow to create the .hyper file used in the COVID "At a Glance" Dashboard.<br></sup></br>
+            <a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
                     src="COVID_alteryx.png" style="width:100%;"/></span></a></p>
-            <h3>Tableau Resume</h3>
-            <sup><p>Uses Tableau to visualize past experience and skills among other thing. Last updated <b><u>November 6, 2020</u></b></sup>
-            <p><a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
+            <h3>Tableau - Resume</h3>
+            <sup><p>Uses Tableau to visualize past experience and skills among other thing. Last updated <b><u>November 6, 2020</u></b><br></sup></br>
+            <a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
                    target="_blank"><span class="image"><img src="Tableau Resume.png" style="width:100%;"/></span></a>
             </p>
             <h3>Python - Simple GUI calculator using Tkinter</h3>
-            <sup><p>Uses Tkinter to build a user interface for a calculator coded in Python.</sup>
-            <p><a href="https://github.com/TPoluch/Calculator" target="_blank"><span class="image"><img
+            <sup><p>Uses Tkinter to build a user interface for a calculator coded in Python.<br></sup></br>
+            <a href="https://github.com/TPoluch/Calculator" target="_blank"><span class="image"><img
                     src="Calculator.png" style="width:100%;"/></span></a></p>
         </article>
 
