--- a/index.html
+++ b/index.html
@@ -114,43 +114,58 @@
 
         <!-- About -->
         <article id="projects">
-            <h2 class="major">Projects</h2>
-            <h5>Python - 2&nbsp;&nbsp;|&nbsp;&nbsp;
-                Tableau - 2&nbsp;&nbsp;|&nbsp;&nbsp;
-                SQL - 1&nbsp;&nbsp;|&nbsp;&nbsp;
-                Alteryx - 1</h5>
-            <p><i><sup>*click the picture to navigate to the project's page</sup></i></p>
-            <h3>Python - User-Unique Recommended Songs Playlist</h3>
+            <h1 class="major">Projects</h1>
+            <h5><a href="#python">Python - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#tableau">Tableau - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#SQL">SQL - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#alteryx">Alteryx - 1</a></h5>
+            <i><sup>*click categories above to go to related projects<br>*click project's picture to navigate to the project's page for details / raw code</sup></i><hr>
+
+            <a id="python"></a><br><h2 class="main"><i>Python</i></h2><br>
+
+            <h3>User-Unique Recommended Songs Playlist</h3>
             <sup><p>Uses Spotify's API to generate a playlist tailored to the user's music tastes.
                 It deciphers the user's preferences via analysis of their favorite songs, audio feature tendencies,
                 and other key factors.<br></sup></br>
             <a href="https://github.com/TPoluch/Spotify"
                target="_blank"><span class="image"><img src="spotify_python.jpeg" style="width:100%;"/></span></a>
-            </p>
-            <h3>SQL - Create MySQL Database / query and alter the data and tables</h3>
-            <sup><p>Part 1 - SQL instructions create a simple database for information about the show Peaky Blinders.
-                Part 2 - SQL snippets to query/alter the database.<br></sup></br>
-            <a href="https://github.com/TPoluch/Peaky_Blinders_SQL_db"
-               target="_blank"><span class="image"><img src="Peaky_Blinders_db.png" style="width:100%;"/></span></a>
-            </p>
-            <h3>Tableau - COVID "At a Glance" Dashboard</h3>
-            <sup><p>Tableau dashboard showing COVID data up top 4/23/2020.<br></sup></br>
+            </p><br>
+            <div><h3>Simple GUI calculator using Tkinter</h3></div>
+            <sup><p>Uses Tkinter to display a user interface for a calculator built in Python<br></sup></br>
+            <a href="https://github.com/TPoluch/Calculator" target="_blank"><span class="image"><img
+                    src="Calculator.png" style="width:100%;"/></span></a>
+            </p><br><hr>
+
+            <a id="tableau"></a><br><h2 class="main"><i>Tableau</i></h2><br>
+
+            <h3>COVID "At a Glance" Dashboard</h3>
+            <sup><p>Tableau dashboard showing COVID data <br>Last updated <b><u>April 23, 2020</u></b><br></sup></br>
                 <a href="https://public.tableau.com/views/COVID-19ataglance/GlobalCOVID-19?:language=en&:display_count=y&:origin=viz_share_link"
                    target="_blank"><span class="image"><img src="COVID Dashboard.png" style="width:100%;"/></span></a>
-            </p>
-            <h3>Alteryx - Workflow for COVID dashboard</h3>
-            <sup><p>Workflow to create the .hyper file used in the COVID "At a Glance" Dashboard.<br></sup></br>
-            <a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
-                    src="COVID_alteryx.png" style="width:100%;"/></span></a></p>
-            <h3>Tableau - Resume</h3>
-            <sup><p>Uses Tableau to visualize past experience and skills among other thing. Last updated <b><u>November 6, 2020</u></b><br></sup></br>
+            </p><br>
+            <h3>Resume</h3>
+            <sup><p>Uses Tableau to visualize past experience, skills, etc.<br>Last updated <b><u>November 6, 2020</u></b><br></sup></br>
             <a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
                    target="_blank"><span class="image"><img src="Tableau Resume.png" style="width:100%;"/></span></a>
+            </p><br><hr>
+
+            <a id="SQL"></a><br><h2 class="main"><i>SQL</i></h2><br>
+
+            <h3>Create MySQL Database / query and alter the data and tables</h3>
+            <sup><p>Part 1 - SQL code to create a simple database for information about the show Peaky Blinders<br>
+                Part 2 - SQL snippets to query/alter the database<br></sup></br>
+            <a href="https://github.com/TPoluch/Peaky_Blinders_SQL_db"
+               target="_blank"><span class="image"><img src="Peaky_Blinders_db.png" style="width:100%;"/></span></a>
+            </p><br><hr>
+
+            <a id="alteryx"></a><br><h2 class="main"><i>Alteryx</i></h2><br>
+
+            <h3>Workflow for COVID dashboard</h3>
+            <sup><p>Workflow to create the .hyper file used in the COVID "At a Glance" Dashboard<br></sup></br>
+            <a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
+                    src="COVID_alteryx.png" style="width:100%;"/></span></a>
             </p>
-            <h3>Python - Simple GUI calculator using Tkinter</h3>
-            <sup><p>Uses Tkinter to build a user interface for a calculator coded in Python.<br></sup></br>
-            <a href="https://github.com/TPoluch/Calculator" target="_blank"><span class="image"><img
-                    src="Calculator.png" style="width:100%;"/></span></a></p>
+            <br><br>
         </article>
 
         <!-- Contact -->
