--- a/index.html
+++ b/index.html
@@ -80,14 +80,19 @@
 
             <section class="indent-1">
                 <section>
-                    <div><h3>Tools</h3></div>
+                    <div><h3>Software</h3></div>
                     <ul>
-                        <li>Alteryx</li>
                         <li>Tableau</li>
-                        <li>Python</li>
-                        <li>SQL</li>
+                        <li>Alteryx</li>
+                        <li>PyCharm</li>
+                        <li>DataGrip</li>
                         <li>Power BI</li>
                         <li>Excel</li>
+                    </ul>
+                    <div><h3>Languages</h3></div>
+                    <ul>
+                        <li>Python</li>
+                        <li>SQL</li>
                         <li>VBA</li>
                         <li>HTML</li>
                     </ul>
