--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
                     <div>
                         <span><img src="linkedin.png" width=50% height=50% align="left"
                                    style="padding-right:10px; padding-bottom: 5px;"/></span>
-                        <p>Hi, I'm Tony. I'm a data analyst skilled in automating the sourcing,
-                            processing, and visualizing of complex data structures. I pride myself
-                            on my work ethic, resourcefulness, and my ability to learn quickly. The
-                            bulk of my work is designing workflows in Alteryx to source, manipulate,
-                            and consolidate data which produces outputs that I then use to create Tableau
-                            dashboard. For further details, here is my <a href="Resume.pdf" download><span
+                        <p>Hi, I'm Tony. I'm an experienced analytics professional primarily functioning as a data scientist/business intelligence developer. 
+				I pride myself on my work ethic, resourcefulness, and my ability to learn quickly. 
+				In my current role I focus on effectively sourcing, processing, and displaying data in order 
+				to provide insight and actionable intelligence. For further details about my work experience, 
+				here is my <a href="Resume.pdf" download><span
                                     class="image.left"><b>resume</b></span></a>.</p></div>
                 </section>
             </section>
