--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
                     <div>
                         <span><img src="linkedin.png" width=50% height=50% align="left"
                                    style="padding-right:10px; padding-bottom: 5px;"/></span>
-                        <p>Hi, I'm Tony. I'm an experienced analytics professional primarily functioning as a data scientist/business intelligence developer. 
+                        <p>Hi, I'm Tony. I'm an experienced analytics professional with a passion for data and technology. 
 				I pride myself on my work ethic, resourcefulness, and my ability to learn quickly. 
 				In my current role I focus on effectively sourcing, processing, and displaying data in order 
-				to provide insight and actionable intelligence. For further details about my work experience, 
+				to provide insight and actionable intelligence. Outside of my current role, I am working on learning 
+				more data science focused tools and languages to enhance and expand my current skillset and broaden my 
+				knowledge of the field. For further details about my work experience, 
 				here is my <a href="Resume.pdf" download><span
                                     class="image.left"><b>resume</b></span></a>.</p></div>
                 </section>
