--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                         <li>Tableau</li>
                         <li>Alteryx</li>
                         <li>PyCharm</li>
+			<li>R Studio</li>
                         <li>DataGrip</li>
                         <li>Power BI</li>
                         <li>Excel</li>
@@ -93,6 +94,7 @@
                     <div><h3>Languages</h3></div>
                     <ul>
                         <li>Python</li>
+			<li>R</li>
                         <li>SQL</li>
                         <li>VBA</li>
                         <li>HTML</li>
@@ -111,7 +113,7 @@
                     <div><h3>Currently Learning</h3></div>
                     <ul>
                         <li>Advanced Python</li>
-                        <li>R</li>
+                        <li>Advanced R</li>
                     </ul>
                 </section>
             </section>
@@ -120,12 +122,21 @@
         <!-- About -->
         <article id="projects">
             <h2 class="major">Projects</h2>
-            <h5><a href="#python">Python - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <h5><a href="#R">R - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+		<a href="#python">Python - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#tableau">Tableau - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#SQL">SQL - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#alteryx">Alteryx - 1</a></h5>
             <i><sup>*click categories above to go to related projects<br>*click project's picture to navigate to the project's page for details / raw code</sup></i><hr>
+		
+	    <a id="R"></a><br><h2 class="main"><i>R Programming</i></h2><br>
 
+            <h3>Simple Neural Network</h3>
+            <sup><p>Using R, this neural network contains 3 hidden layers and predicts iris species using petal and sepal size values as inputs. <br></sup></br>
+            <a href="https://github.com/TPoluch/Simple-Neural-Network-R"
+               target="_blank"><span class="image"><img src="Iris Neural Network Diagram.png" style="width:100%;"/></span></a>
+            <hr>
+	
             <a id="python"></a><br><h2 class="main"><i>Python</i></h2><br>
 
             <h3>User-Unique Recommended Songs Playlist</h3>
