--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h3>Simple Neural Network</h3>
             <sup><p>Using R, this neural network contains 2 hidden layers and predicts iris species using petal and sepal size values as inputs. <br></sup></br>
             <a href="https://github.com/TPoluch/Simple-Neural-Network-R"
-               target="_blank"><span class="image"><img src="" style="width:100%;"/></span></a>
+               target="_blank"><span class="image"><img src="Iris Neural Network Diagram.png" style="width:100%;"/></span></a>
             <hr>
 	
             <a id="python"></a><br><h2 class="main"><i>Python</i></h2><br>
