--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
         <!-- About -->
         <article id="projects">
             <h2 class="major">Projects</h2>
-            <h5><a href="#R">R - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a href="#python">Python - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#tableau">Tableau - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#SQL">SQL - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <h5><a href="#R">R - 1</a>&nbsp;|&nbsp;
+		<a href="#python">Python - 2</a>&nbsp;|&nbsp;
+                <a href="#tableau">Tableau - 2</a>&nbsp;|&nbsp;
+                <a href="#SQL">SQL - 1</a>&nbsp;|&nbsp;
                 <a href="#alteryx">Alteryx - 1</a></h5>
             <i><sup>*click categories above to go to related projects<br>*click project's picture to navigate to the project's page for details / raw code</sup></i><hr>
 		
