--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <sup><p>Uses Spotify's API to generate a playlist tailored to the user's music tastes.
                 It deciphers the user's preferences via analysis of their favorite songs, audio feature tendencies,
                 and other key factors.<br></sup></br>
-            <a href="https://github.com/TPoluch/Spotify"
+            <a href="https://github.com/TPoluch/Python-Recommended-Spotify-Playlist"
                target="_blank"><span class="image"><img src="spotify_python.jpeg" style="width:100%;"/></span></a>
             </p><br>
             <div><h3>Simple GUI calculator using Tkinter</h3></div>
