--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 	    <a id="R"></a><br><h2 class="main"><i>R Programming</i></h2><br>
 
             <h3>Simple Neural Network</h3>
-            <sup><p>Using R, this neural network contains 2 hidden layers and predicts iris species using petal and sepal size values as inputs. <br></sup></br>
+            <sup><p>This neural network predicts iris species using petal and sepal size values as inputs. 
+		    It contains 2 hidden layers with 6 nodes in the first and 4 nodes in the second.<br></sup></br>
             <a href="https://github.com/TPoluch/Simple-Neural-Network-R"
                target="_blank"><span class="image"><img src="Iris Neural Network Diagram.png" style="width:100%;"/></span></a>
             </p><br><hr>
