--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="icon" href="tie_icon.png">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <meta property="og:image" content="img.png"/>
+    <meta property="og:image" content="img.png" />
+    <meta property="og:description" content="Personal portfolio website" />
+    <meta property="og:url"content="https://tpoluch.github.io/#" />
+    <meta property="og:title" content="Anthony Poluch" />
     <link rel="stylesheet" href="main.css"/>
     <noscript>
         <link rel="stylesheet" href="noscript.css"/>
