--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="icon" href="tie_icon.png">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <meta property="og:image" content="img.png" />
-    <meta property="og:description" content="Personal portfolio website" />
-    <meta property="og:url"content="https://tpoluch.github.io/#" />
-    <meta property="og:title" content="Anthony Poluch" />
+<meta name="description" content="_" />
+<meta name="title" property="og:title" content="Anthony Poluch" />
+<meta property="og:type" content="Website" />
+<meta name="image" property="og:image" content="img.png" />
+<meta name="description" property="og:description" content="Personal portfolio website" /><meta name="author" content="Anthony Poluch" />	
     <link rel="stylesheet" href="main.css"/>
     <noscript>
         <link rel="stylesheet" href="noscript.css"/>
