--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="description" content="_" />
 <meta name="title" property="og:title" content="Anthony Poluch" />
 <meta property="og:type" content="Website" />
-<meta name="image" property="og:image" content="https://www.flickr.com/photos/192850888@N02/shares/f1iS68.png" />
+<meta name="image" property="og:image" content="https://www.fhttps://live.staticflickr.com/65535/51140233602_12c9795925_b.jpg" />
 <meta name="description" property="og:description" content="Personal portfolio website" /><meta name="author" content="Anthony Poluch" />	
     <link rel="stylesheet" href="main.css"/>
     <noscript>
