--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <h3>Resume</h3>
             <sup><p>Uses Tableau to visualize past experience, skills, etc.<br>Last updated <b><u>November 6, 2020</u></b><br></sup></br>
             <a href="https://public.tableau.com/views/Resume_16046224946220/Resume?:language=en&:display_count=y&:origin=viz_share_link"
-                   target="_blank"><span class="image"><img src="Tableau Resume.png" style="width:100%;"/></span></a>
+                   target="_blank"><span class="image"><img src="Tableau Resume.pn" style="width:100%;"/></span></a>
             </p><br><hr>
 
             <a id="SQL"></a><br><h2 class="main"><i>SQL</i></h2><br>
