--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <noscript>
         <link rel="stylesheet" href="noscript.css"/>
     </noscript>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L31GKY54MJ"></script>
+    <script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-L31GKY54MJ');
+    </script>
 </head>
 <body class="is-preload">
 
