--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 -->
 <html>
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5DZ6FZH');</script>
+<!-- End Google Tag Manager -->
     <title>Anthony Poluch</title>
     <link rel="icon" href="tie_icon.png">
     <meta charset="utf-8"/>
@@ -28,17 +35,10 @@
 
 	  gtag('config', 'G-LS8HMDSRJ7');
 	</script>
-    <!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-P6N22R8');</script>
-	<!-- End Google Tag Manager -->
 </head>
 <body class="is-preload">
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P6N22R8"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DZ6FZH"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!-- Wrapper -->
