--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li>DataGrip</li>
                         <li>Power BI</li>
                         <li>Excel</li>
+			<li>Google Analytics</li>
                     </ul>
                     <div><h3>Languages</h3></div>
                     <ul>
