--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="content">
             <div class="inner">
                 <h2><b>Anthony Poluch</b></h2>
-                <p>Data Analyst</p>
+                <p>Senior Data Analyst</p>
             </div>
         </div>
         <nav>
