--- a/index.html
+++ b/index.html
@@ -114,12 +114,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li>DataGrip</li>
                         <li>Power BI</li>
                         <li>Excel</li>
+			<li>Oracle Analytics Cloud (OACs)</li>
+			<li>Oracle Transactional Business Intelligence (OTBI)</li>
                         <li>Google Analytics</li>
-                    </ul>
-                    <div><h3>Currently Learning</h3></div>
-                    <ul>
-                        <li>Advanced Python</li>
-                        <li>Advanced R</li>
+			<li>Google Tag Manager</li>
                     </ul>
                 </section>
                 <section>
