--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="#tableau">Tableau - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#SQL">SQL - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#alteryx">Alteryx - 1</a></h5>
-            <i><sup>*click categories above to go to related projects<br>*click project's picture to navigate to the project's page for details / raw code</sup></i><hr>
+            <i><sup>*click categories above to go to related projects *click project image to view github repo (project overview/code)</sup></i><hr>
 		
 	    <a id="R"></a><br><h2 class="main"><i>R Programming</i></h2><br>
 
