--- a/index.html
+++ b/index.html
@@ -17,11 +17,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="icon" href="tie_icon.png">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <meta name="description" content="_" />
+    <meta name="description" content="Personal portfolio website" />
     <meta name="title" property="og:title" content="Anthony Poluch" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51792729193_a7c9fe1ce7_c.jpg"/>
-    <meta name="description" property="og:description" content="Personal portfolio website" /><meta name="author" content="Anthony Poluch" />	
+    <meta
+            name="image"
+            property="og:image"
+            content="https://live.staticflickr.com/65535/51141187438_1b896e2755_c.jpg"
+    />
+    <meta
+            name="description"
+            property="og:description"
+            content="Personal portfolio website"
+    />
+    <meta name="author" content="Anthony Poluch" />	
     <link rel="stylesheet" href="main.css"/>
     <noscript>
         <link rel="stylesheet" href="noscript.css"/>
