--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="content">
             <div class="inner">
                 <h2><b>Anthony Poluch</b></h2>
-                <p>Senior Data Analyst</p>
+                <p>Senior Business Intelligence Analyst</p>
             </div>
         </div>
         <nav>
@@ -91,7 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                    style="padding-right:10px; padding-bottom: 5px;"/></span>
                         <p>Hi, I'm Tony. I'm an experienced analytics professional with a passion for data and technology. 
 				I pride myself on my work ethic, resourcefulness, and my ability to learn quickly. 
-				In my current role I focus on effectively sourcing, processing, and displaying data in order 
+				In my current role I focus on effectively sourcing, processing, and visualizing data in order 
 				to provide insight and actionable intelligence. Outside of my current role, I am working on learning 
 				more data science focused tools and languages to enhance and expand my current skillset and broaden my 
 				knowledge of the field. For further details about my work experience, 
