--- a/index.html
+++ b/index.html
@@ -154,11 +154,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- About -->
         <article id="projects">
             <h2 class="major">Projects</h2>
-            <h5><a href="#R">R - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a href="#python">Python - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#tableau">Tableau - 2</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#SQL">SQL - 1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#alteryx">Alteryx - 1</a></h5>
+            <h5><a href="#R">R</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+		<a href="#python">Python</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#tableau">Tableau</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#SQL">SQL</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#alteryx">Alteryx</a></h5>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#google">Google Analytics</a></h5>
             <i><sup>*click categories above to go to related projects<br>*click project image to view github repo (project overview/code)</sup></i><hr>
 		
 	    <a id="R"></a><br><h2 class="main"><i>R Programming</i></h2><br>
@@ -213,6 +214,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <sup><p>Workflow to create the .hyper file used in the COVID "At a Glance" Dashboard<br></sup></br>
             <a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
                     src="COVID_alteryx.png" style="width:100%;"/></span></a>
+            </p>
+            <br><br>
+
+
+            <a id="google"></a><br><h2 class="main"><i>Google Analytics</i></h2><br>
+
+            <h3>Website Tracking Metrics</h3>
+            <sup><p>Dashboard that uses Google Tag Manager to show a snapshot of the traffic on my personal website<br></sup></br>
+            <a href="https://github.com/TPoluch/Website-Tracking-Metrics-Dashboard" target="_blank"><span class="image fit"><img
+                    src="WebsiteTrackingDashboard.png" style="width:100%;"/></span></a>
             </p>
             <br><br>
         </article>
