--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="#python">Python</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#tableau">Tableau</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#SQL">SQL</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#alteryx">Alteryx</a></h5>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#alteryx">Alteryx</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#google">Google Analytics</a></h5>
             <i><sup>*click categories above to go to related projects<br>*click project image to view github repo (project overview/code)</sup></i><hr>
 		
