--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="#tableau">Tableau</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#SQL">SQL</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="#alteryx">Alteryx</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#google">Google Analytics</a></h5>
+                <a href="#google">Google Analytics</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="#other">Others</a></h5>
             <i><sup>*click categories above to go to related projects<br>*click project image to view github repo (project overview/code)</sup></i><hr>
 		
 	    <a id="R"></a><br><h2 class="main"><i>R Programming</i></h2><br>
