--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="https://github.com/TPoluch/COVID_alteryx" target="_blank"><span class="image fit"><img
                     src="COVID_alteryx.png" style="width:100%;"/></span></a>
             </p>
-            <br><br>
+            <br><br><hr>
 
 
             <a id="google"></a><br><h2 class="main"><i>Google Analytics</i></h2><br>
@@ -226,7 +226,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="https://github.com/TPoluch/Website-Tracking-Metrics-Dashboard" target="_blank"><span class="image fit"><img
                     src="WebsiteTrackingDashboard.png" style="width:100%;"/></span></a>
             </p>
-            <br><br>
+            <br><hr>
+
+	    <a id="other"></a><br><h2 class="main"><i>Others</i></h2><br>
+
+            <h3>Smart Home Custom Integrations</h3>
+            <sup><p>Using a Raspberry Pi I have been able to integrate non-Apple Homekit products into my Apple smart home.
+                This allows me to control these devices using my voice, control them remotely, set up automations to control them based on various scenarios,
+                and more. For example, I integrated my car into Homekit and then set up a scene that, during winter months, uses a
+                motion sensor and other inputs/parameters to automatically start heating up my car as I get ready for the gym in the morning.<br></sup></br>
+            </p><br>
+            <h3>Personal Finance Dashboard</h3>
+            <sup><p>Through Plaid's API I was able to connect to all of my bank/credit accounts and pull in the transaction data. After cleaning 
+                and combining the data I pulled it into Tableau where I created calculated fields, trend analyses, etc. to get a more accurate 
+                look at my spending and also view how the future growth of my savings will look based on the current data.<br></sup></br>
+            </p><br><hr>
+
         </article>
 
         <!-- Contact -->
