--- a/index.html
+++ b/index.html
@@ -234,11 +234,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <sup><p>Using a Raspberry Pi I have been able to integrate non-Apple Homekit products into my Apple smart home.
                 This allows me to control these devices using my voice, control them remotely, set up automations to control them based on various scenarios,
                 and more. For example, I integrated my car into Homekit and then set up a scene that, during winter months, uses a
-                motion sensor and other inputs/parameters to automatically start heating up my car as I get ready for the gym in the morning.<br></sup></br>
-            </p><br>
+                motion sensor and other inputs/parameters to automatically start heating up my car as I get ready
+                for the gym in the morning.</sup>
+            </p>
             <h3>Personal Finance Dashboard</h3>
-            <sup><p>Through Plaid's API I was able to connect to all of my bank/credit accounts and pull in the transaction data. After cleaning 
-                and combining the data I pulled it into Tableau where I created calculated fields, trend analyses, etc. to get a more accurate 
+            <sup><p>Through Plaid's API I was able to connect to all of my bank/credit accounts and pull in the transaction data. After cleaning
+                and combining the data I pulled it into Tableau where I created calculated fields, trend analyses, etc. to get a more accurate
                 look at my spending and also view how the future growth of my savings will look based on the current data.<br></sup></br>
             </p>
 
