--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Personal Finance Dashboard</h3>
             <sup><p>Through Plaid's API I was able to connect to all of my bank/credit accounts and pull in the transaction data. After cleaning
                 and combining the data I pulled it into Tableau where I created calculated fields, trend analyses, etc. to get a more accurate
-                look at my spending and also view how the future growth of my savings will look based on the current data.<br></sup></br>
+                look at my spending and insight into the future growth of my savings.<br></sup></br>
             </p>
 
         </article>
