--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Smart Home Custom Integrations</h3>
             <sup><p>Using a Raspberry Pi I have been able to integrate non-Apple Homekit products into my Apple smart home.
                 This allows me to control these devices using my voice, control them remotely, set up automations to control them based on various scenarios,
-                and more. For example, I integrated my car into Homekit and then set up a scene that, during winter months, uses a
+                and more. For example, I integrated my car into Homekit and then set up an automation that, during winter months, uses a
                 motion sensor and other inputs/parameters to automatically start heating up my car as I get ready
                 for the gym in the morning.</sup>
             </p>
