--- a/index.html
+++ b/index.html
@@ -154,14 +154,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- About -->
         <article id="projects">
             <h2 class="major">Projects</h2>
-            <h5><a href="#R">R</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a href="#python">Python</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#tableau">Tableau</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#SQL">SQL</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#alteryx">Alteryx</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#google">Google Analytics</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="#other">Others</a></h5>
-            <i><sup>*click categories above to go to related projects<br>*click project image to view github repo (project overview/code)</sup></i><hr>
+            <div class="dropdown">
+              <button class="dropbtn">Language/Tool▼</button>
+              <div class="dropdown-content">
+                  <a href="#R">R</a>
+                  <a href="#python">Python</a>
+                  <a href="#tableau">Tableau</a>
+                  <a href="#SQL">SQL</a>
+                  <a href="#alteryx">Alteryx</a>
+                  <a href="#google">Google Analytics</a>
+                  <a href="#other">Others</a>
+              </div>
+            </div>
+            <br>
+            <i><sup><br>*click project image to view github repo (project overview/code)</sup></i><hr>
 		
 	    <a id="R"></a><br><h2 class="main"><i>R Programming</i></h2><br>
 
