--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <article id="projects">
             <h2 class="major">Projects</h2>
             <div class="dropdown">
-              <button class="dropbtn">Language/Tool▼</button>
+              <button class="dropbtn">Language/Tools ▼</button>
               <div class="dropdown-content">
                   <a href="#R">R</a>
                   <a href="#python">Python</a>
