--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-5DZ6FZH');</script>
 <!-- End Google Tag Manager -->
     <title>Anthony Poluch</title>
-    <link rel="icon" href="tie_icon.png">
+    <link rel="icon" href="man.png">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <meta name="description" content="Personal portfolio website" />
