--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <a href="#alteryx">Alteryx</a>
                   <a href="#SQL">SQL</a>
                   <a href="#R">R</a>
+		  <a href="#HTML">HTML</a>
                   <a href="#google">Google Analytics</a>
                   <a href="#other">Others</a>
               </div>
@@ -226,7 +227,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p><br><hr>
 
 
-            <a id="google"></a><br><h2 class="main"><i>Google Analytics</i></h2><br>
+            <a id="HTML"></a><br><h2 class="main"><i>HTML</i></h2><br>
+
+            <h3>Personal Portfolio Website</h3>
+            <sup><p>This website, built using HTML and CSS.<br></sup></br>
+            <a href="https://github.com/TPoluch/TPoluch.github.io"
+               target="_blank"><span class="image"><img src="website.png" style="width:100%;"/></span></a>
+            </p><br><hr>
+
+	    <a id="google"></a><br><h2 class="main"><i>Google Analytics</i></h2><br>
 
             <h3>Website Tracking Metrics</h3>
             <sup><p>Dashboard that uses Google Tag Manager to show a snapshot of the traffic on my personal website<br></sup></br>
